# platformer

./: CMakeLists.txt
src/: collision.cpp  collision.h  entity.h  game.cpp  game.h  main.cpp  physics.cpp  physics.h  player.cpp  player.h  state_machine.h  tile_map.cpp  tile_map.h  transform.h
